# neovim-jupyter

./: .gitignore  Cargo.toml  README.md  build.sh  codereview.md  test_dd.lua  test_dd2.lua  test_dd_last.lua  test_dd_mark.lua  test_setreg.lua  test_yy.lua
docs/superpowers/plans/: 2026-05-25-neovim-jupyter.md
docs/superpowers/specs/: 2026-05-25-neovim-jupyter-design.md
lua/nvim-jupyter/: cells.lua  config.lua  daemon.lua  graphics.lua  init.lua  kernels.lua  lsp.lua  notebook.lua  output.lua  ui.lua
src/: client.rs  kernel.rs  lib.rs  main.rs  protocol.rs  router.rs  wire.rs
test/: cells_spec.lua  headless.lua  notebook_spec.lua  out.ipynb  output_spec.lua  repro-init.lua  smoke.sh  test.sh  test_cursor.lua
test/fixtures/: simple.ipynb
tests/: kernel_integration.rs
