[package]
name = "nvim-jupyter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nvim-jupyter"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
zeromq      = "0.4"
uuid        = { version = "1", features = ["v4"] }
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"
anyhow      = "1"
bytes       = "1"
rand        = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
integration = []


